Update contact email address in index.html

--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
 
         <div class="contact-wrapper">
             <span class="contact-label" id="txt-label">LICENSE & CONTACT</span>
-            <a href="mailto:soldansaga@gmail.com" class="email-btn">
-                soldansaga@gmail.com
+            <a href="mailto:19gs05bcs@gmail.com" class="email-btn">
+                19gs05bcs@gmail.com
             </a>
         </div>
 
