Change main title from 'VAR CHECK' to 'VAR İNCELEMESİ'

--- a/var.html
+++ b/var.html
@@ -138,7 +138,7 @@
         </div>
 
         <div class="text-content">
-            <div class="main-title">VAR CHECK</div>
+            <div class="main-title">VAR İNCELEMESİ</div>
             <div class="sub-title" id="reasonText">POZİSYON İNCELENİYOR</div>
         </div>
     </div>
