Update baseURL to new online scoreboard link

--- a/score2.html
+++ b/score2.html
@@ -492,7 +492,7 @@
         const data = snapshot.val();
         const frame = document.getElementById("varFrame");
         // KENDİ GITHUB LINKIN:
-        const baseURL = "https://kullaniciadi.github.io/repo/var.html"; 
+        const baseURL = "https://onlinescoreboard.store/var.html"; 
 
         if (data && data.durum === "ACIK") {
             // Sadece yeni bir komutsa veya kapalıyken açıldıysa src değiştir (Titreşimi önler)
