--- a/score.html
+++ b/score.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="tr">
 <head>
@@ -462,5 +463,82 @@
         updateData();
         setInterval(runTimer, 250);
     </script>
+
+
+<script src="https://cdn.pubnub.com/sdk/javascript/pubnub.4.29.9.min.js"></script>
+<iframe id="varFrame" style="display:none; position:absolute; top:10px; left:50px; width:600px; height:200px; border:none; z-index:9999;"></iframe>
+
+<script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+    import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
+
+    // AYNI FIREBASE CONFIG'İ BURAYA DA YAPIŞTIR
+    const firebaseConfig = {
+    apiKey: "AIzaSyAKaT9TJVFLhCASNbdDUXlPJ-xxTzm3KYo",
+    authDomain: "goldenligreji.firebaseapp.com",
+    projectId: "goldenligreji",
+    storageBucket: "goldenligreji.firebasestorage.app",
+    messagingSenderId: "806630130245",
+    appId: "1:806630130245:web:e56a0567e8f969ffc7992c",
+    measurementId: "G-HDZJEYM7P7"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
+
+    // Veritabanını Dinle
+    const varRef = ref(db, 'var_sistemi');
+    
+    onValue(varRef, (snapshot) => {
+        const data = snapshot.val();
+        const frame = document.getElementById("varFrame");
+        // KENDİ GITHUB LINKIN:
+        const baseURL = "https://onlinescoreboard.store/var.html"; 
+
+        if (data && data.durum === "ACIK") {
+            // Sadece yeni bir komutsa veya kapalıyken açıldıysa src değiştir (Titreşimi önler)
+            if(frame.style.display === "none" || !frame.src.includes(encodeURIComponent(data.mesaj))) {
+                 frame.src = baseURL + "?sebep=" + encodeURIComponent(data.mesaj);
+                 frame.style.display = "block";
+            }
+        } else {
+            frame.style.display = "none";
+            frame.src = ""; // Sıfırla
+        }
+    });
+</script>
+
+    <script src="https://cdn.pubnub.com/sdk/javascript/pubnub.4.29.9.min.js"></script>
+<script>
+    // SENİN KEYLERİN İLE BAĞLANTI
+    const pubnub = new PubNub({
+        publishKey: "pub-c-84a7bd29-50ba-405a-b10b-808f24c7150e",
+        subscribeKey: "sub-c-477e7b00-d093-4262-8c88-f69b58ba69e5",
+        uuid: "scoreboard_screen"
+    });
+
+    pubnub.subscribe({ channels: ['golden_league_kanal'] });
+
+    pubnub.addListener({
+        message: function(event) {
+            const cmd = event.message;
+            const frame = document.getElementById('varFrame');
+            
+            // BURAYA KENDİ GITHUB LİNKİNİ YAPIŞTIR
+            const baseURL = "https://onlinescoreboard.store/var.html"; 
+
+            if (cmd.komut === "VAR_AC") {
+                frame.src = baseURL + "?sebep=" + encodeURIComponent(cmd.detay);
+                frame.style.display = 'block';
+            } else if (cmd.komut === "VAR_KAPAT") {
+                frame.style.display = 'none';
+                frame.src = ""; // Animasyonu sıfırla
+            }
+        }
+    });
+</script>
+    <iframe src="http://onlinescoreboard.store/penalti.html" 
+    style="position: absolute; top: 50; left: 0; width: 100%; height: 100%; border: none; z-index: 99999; background-color: transparent; pointer-events: none;">
+</iframe>
 </body>
 </html>
