--- a/score.html
+++ b/score.html
@@ -537,8 +537,8 @@
         }
     });
 </script>
-    <iframe src="http://onlinescoreboard.store/penalti.html" 
-    style="position: absolute; top: 50; left: 0; width: 100%; height: 100%; border: none; z-index: 99999; background-color: transparent; pointer-events: none;">
+   <iframe src="https://onlinescoreboard.store/penalti.html" 
+    style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none; z-index: 99999; background-color: transparent; pointer-events: none;">
 </iframe>
 </body>
 </html>
