--- a/penalti.html
+++ b/penalti.html
@@ -7,17 +7,17 @@
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap');
 
         body {
-            margin: 0; padding: 0;
-            background-color: transparent; 
-            height: 100vh;
-            width: 100vw;
-            display: flex;
-            justify-content: center;
-            align-items: flex-end;
-            padding-bottom: 60px;
-            font-family: 'Montserrat', sans-serif;
-            overflow: hidden;
-        }
+             margin: 0; padding: 0;
+             background: linear-gradient(135deg, rgba(26,26,26,0.95) 0%, rgba(45,45,45,0.95) 100%);
+             height: 100vh;
+             width: 100vw;
+             display: flex;
+             justify-content: center;
+             align-items: flex-end;
+             padding-bottom: 60px;
+             font-family: 'Montserrat', sans-serif;
+             overflow: hidden;
+             }
 
         /* ANA KAPSAYICI */
         .golden-board {
